# pdns-distribute

./: .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml.tmpl  LICENSE.txt  Makefile  README.md  container-compose.yaml  docker-compose.yaml  go.mod  go.sum  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: codeql-analysis.yml  documentation.yml  goreleaser.yml  linters.yml  pre-build.yml  production-build.yml
cmd/example-microservice/: main.go
cmd/pdns-api-proxy/: main.go
cmd/pdns-health-checker/: main.go
cmd/pdns-secondary-syncer/: main.go
cmd/pdns-tool/: main.go
cmd/pdns-zone-provider/: main.go
cmd/release-config-generator/: main.go
configs/example-microservice/: config.toml
configs/pdns-api-proxy/: config.toml
configs/pdns-health-checker/: config.toml
configs/pdns-secondary-syncer/: config.toml
configs/pdns-zone-provider/: config.toml
docs/: index.md
docs/architecture/: architecture.md
docs/credits/: credits.md
docs/css/: layout.css
docs/development/: build.md  contribute.md  documentation.md  release.md  test.md
docs/mermaid/: event_health_check.mmd  event_sync.mmd  health_check.mmd  rrsig_signing_sync.mmd
docs/microservices/: pdns-api-proxy.md  pdns-health-checker.md  pdns-secondary-syncer.md  pdns-zone-provider.md
docs/operation/: configuration.md  installation.md  observability.md
init/: systemd.service.tmpl
internal/pkg/eventutils/: eventutils.go
pkg/microservice/: microservice.go
scripts/: compress_at_release.sh
scripts/package/: postinstall.sh.tmpl  preinstall.sh.tmpl  preremove.sh.tmpl
(+88 files in other folders)
