[tool.poetry]
name = "pdns-distribute-docs"
version = "0.1.0"
description = "This file contaions requirements for the pdns-distribute documentation"
authors = ["linxside <noreply@linxsi.de"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "1.3.0"
mkdocs-material = "8.2.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
