[tool.poetry]
name = "pdns-distribute-docs"
version = "0.1.0"
description = "This file contains requirements for the pdns-distribute documentation"
authors = ["linxside <noreply@linxsi.de>"]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "1.6.1"
mkdocs-material = "9.6.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
